[gd_scene load_steps=7 format=3 uid="uid://ccb5p5ljgby2h"]

[ext_resource type="Texture2D" uid="uid://bu2dxdit6voq6" path="res://Image/Game/ChessBoardSideWhite.png" id="1_0b1s8"]
[ext_resource type="Script" path="res://Script/Game/Game.gd" id="2_i7d2e"]
[ext_resource type="PackedScene" uid="uid://caicvg7ub7mxg" path="res://Scene/Game/ChessBoard.tscn" id="2_ry56a"]
[ext_resource type="FontFile" uid="uid://cxdqxyi5rffvv" path="res://Font/Forgotten.ttf" id="3_tm7ce"]
[ext_resource type="Texture2D" uid="uid://cfjkjpai2ha0f" path="res://Image/Gods/GoddessOfTeleportation/DéesseTéléportationChessBoard.png" id="4_7mkl3"]
[ext_resource type="Texture2D" uid="uid://m2mycis7i5p8" path="res://Image/Gods/GodOfDeath/DieuMortChessBoard.png" id="5_stih7"]

[node name="Game" type="Sprite2D"]
texture = ExtResource("1_0b1s8")
centered = false
script = ExtResource("2_i7d2e")

[node name="Player1" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 2.0
offset_top = 538.0
offset_right = 1920.0
offset_bottom = 1078.0

[node name="Username" type="Label" parent="Player1"]
layout_mode = 0
offset_left = 1446.0
offset_top = 338.0
offset_right = 1902.0
offset_bottom = 440.0
theme_override_fonts/font = ExtResource("3_tm7ce")
theme_override_font_sizes/font_size = 60
text = "Username1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GodSelect" type="Sprite2D" parent="Player1"]
position = Vector2(-45, 2.00001)
scale = Vector2(1, 0.965)
texture = ExtResource("4_7mkl3")
centered = false

[node name="Player2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 538.0

[node name="Username" type="Label" parent="Player2"]
layout_mode = 0
offset_left = 15.0
offset_top = 102.0
offset_right = 473.0
offset_bottom = 204.0
theme_override_fonts/font = ExtResource("3_tm7ce")
theme_override_font_sizes/font_size = 60
text = "Username2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GodSelect" type="Sprite2D" parent="Player2"]
position = Vector2(1369, -29)
texture = ExtResource("5_stih7")
centered = false

[node name="ChessBoard" parent="." instance=ExtResource("2_ry56a")]
position = Vector2(559, 140)

[node name="MovePreview" type="Node2D" parent="."]

[node name="GameMenu" type="Sprite2D" parent="."]
visible = false

[node name="ButtonGameMenu" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_right = 154.0
offset_bottom = 84.0
mouse_default_cursor_shape = 2

[connection signal="button_down" from="ButtonGameMenu" to="." method="_on_button_game_menu_button_down"]
